fix package.json author declaration

--- a/package.json
+++ b/package.json
@@ -25,8 +25,8 @@
   },
   "keywords": [],
   "author": {
-    "name": "Florian S",
-    "email": "contact@flo-x.fr"
+    "name": "Mélissa W, Priscillia B, Florian S",
+    "email": "infodex-infinity@flo-x.fr"
   },
   "license": "MIT",
   "dependencies": {
