--- a/package.json
+++ b/package.json
@@ -15,10 +15,10 @@
   "devDependencies": {
     "@electron-forge/cli": "^7.4.0",
     "@electron-forge/maker-deb": "^7.4.0",
+    "@electron-forge/maker-dmg": "^7.5.0",
     "@electron-forge/maker-rpm": "^7.4.0",
     "@electron-forge/maker-squirrel": "^7.4.0",
     "@electron-forge/maker-zip": "^7.4.0",
-    "@electron-forge/maker-dmg": "^7.5.0",
     "@electron-forge/plugin-auto-unpack-natives": "^7.4.0",
     "@electron-forge/plugin-fuses": "^7.4.0",
     "@electron/fuses": "^1.8.0",
@@ -31,6 +31,7 @@
   },
   "license": "MIT",
   "dependencies": {
+    "electron-is-packaged": "^1.0.2",
     "electron-squirrel-startup": "^1.0.1"
   }
 }
