--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 		"package": "electron-forge package",
 		"make": "electron-forge make",
 		"publish": "electron-forge publish",
+		"clean": "rm -r out/",
 		"lint": "echo \"No linting configured\""
 	},
 	"devDependencies": {
