Update .gitlab-ci.yml file

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,10 +10,9 @@
 # See https://docs.gitlab.com/ee/ci/yaml/index.html for all available options
 
 # you can delete this line if you're not using Docker
-image: node:latest
+image: malept/electron-forge-container:latest
 
 before_script:
-  - apt install dpkg fakeroot -y
   - npm install
 
 build1:
