Update .gitlab-ci.yml file

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,9 +10,10 @@
 # See https://docs.gitlab.com/ee/ci/yaml/index.html for all available options
 
 # you can delete this line if you're not using Docker
-image: malept/electron-forge-container:latest
+image: node:current-bookworm
 
 before_script:
+  - apt install dpkg
   - npm install
 
 build1:
