--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,22 +1,34 @@
-# This file is a template, and might need editing before it works on your project.
-# You can copy and paste this template into a new `.gitlab-ci.yml` file.
-# You should not add this template to an existing `.gitlab-ci.yml` file by using the `include:` keyword.
-#
-# To contribute improvements to CI/CD templates, please follow the Development guide at:
-# https://docs.gitlab.com/ee/development/cicd/templates.html
-# This specific template is located at:
-# https://gitlab.com/gitlab-org/gitlab/-/blob/master/lib/gitlab/ci/templates/Bash.gitlab-ci.yml
+stages:
+  - install
+  - build
+  - test
+  - package
 
-# See https://docs.gitlab.com/ee/ci/yaml/index.html for all available options
-
-# you can delete this line if you're not using Docker
-image: node:current-bookworm
+variables:
+  NODE_ENV: production
 
 before_script:
-  - apt install dpkg fakeroot
-  - npm install
+  - npm install -g electron-forge
 
-build1:
+install_dependencies:
+  stage: install
+  script:
+    - npm install
+
+build_application:
   stage: build
   script:
     - npm run make
+
+test_application:
+  stage: test
+  script:
+    - npm run test
+
+package_application:
+  stage: package
+  script:
+    - npm run package
+  artifacts:
+    paths:
+      - out/
