--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -14,6 +14,7 @@ build_application:
   stage: build
   script:
     - npm run make
+    - rm -r out/infodex-infinity-linux-x64
   artifacts:
     paths:
       - out/
