--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,4 +1,4 @@
-image: node:22 # ou une version Node.js adaptée à votre projet
+image: electronuserland/builder:wine # ou une version Node.js adaptée à votre projet
 
 stages:
   - build
@@ -7,7 +7,7 @@ variables:
   NODE_ENV: production
 
 before_script:
-  - apt-get update && apt-get install -y dpkg-dev fakeroot zip wine mono-complete
+  - apt-get update && apt-get install -y dpkg-dev fakeroot zip
   - npm install --include=dev
 
 build_application_linux:
