Update .gitlab-ci.yml file

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,7 +11,8 @@ before_script:
   - npm install --include=dev
 
 build_application_linux:
-  when: manual
+  only:
+    - tags 
   stage: build
   script:
     - npm run make
