Added makself (self extractable archive) to CI

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,7 +7,7 @@ variables:
   NODE_ENV: production
 
 before_script:
-  - apt-get update && apt-get install -y dpkg-dev fakeroot zip
+  - apt-get update && apt-get install -y dpkg-dev fakeroot zip makeself
   - npm install --include=dev
 
 build_application_linux:
@@ -16,6 +16,9 @@ build_application_linux:
   stage: build
   script:
     - npm run make
+    - mkdir -p out/make/makeself/x64/
+    - echo "echo Starting Infodex-Infinity... ; ./infodex-infinity --no-sandbox >/dev/null 2>&1" > out/infodex-infinity-linux-x64/makeselfstartup.sh
+    - makeself --nomd5 --nocomp --nocrc --nox11 out/infodex-infinity-linux-x64/ out/make/makeself/x64/infodex-infinity.run infodex-infinity bash makeselfstartup.sh
     - rm -r out/infodex-infinity-linux-x64
   artifacts:
     paths:
