--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,6 +11,8 @@ before_script:
   - npm install --include=dev
 
 build_application_linux:
+  only:
+    - tags 
   stage: build
   script:
     - npm run make
