--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,6 +2,7 @@ image: node:22
 
 stages:
   - build
+  - makeself
 
 variables:
   NODE_ENV: production
@@ -10,16 +11,25 @@ before_script:
   - apt-get update && apt-get install -y dpkg-dev fakeroot zip makeself
   - npm install --include=dev
 
-build_application_linux:
-  only:
-    - tags 
+build_application:
+#  only:
+#    - tags 
   stage: build
   script:
     - npm run make
-    - mkdir -p out/make/makeself/x64/
     - echo "echo Starting Infodex-Infinity... ; ./infodex-infinity --no-sandbox >/dev/null 2>&1" > out/infodex-infinity-linux-x64/makeselfstartup.sh
-    - makeself --nomd5 --nocrc --nox11 out/infodex-infinity-linux-x64/ out/make/makeself/x64/infodex-infinity.run infodex-infinity bash makeselfstartup.sh
-    - rm -r out/infodex-infinity-linux-x64
   artifacts:
     paths:
-      - out/
+      - out/make/
+
+build_makeself:
+#  only:
+#    - tags 
+  stage: makeself
+  script:
+    - mkdir -p out/makeself/x64/
+    - echo "echo Starting Infodex-Infinity... ; ./infodex-infinity --no-sandbox >/dev/null 2>&1" > out/infodex-infinity-linux-x64/makeselfstartup.sh
+    - makeself --nomd5 --nocrc --nox11 out/infodex-infinity-linux-x64/ out/makeself/x64/infodex-infinity.run infodex-infinity sh makeselfstartup.sh
+  artifacts:
+    paths:
+      - out/makeself
